[package]

name = "webrast"
version = "0.1.0"

[[bin]]
name = "webrast"
path = "lib.rs"

[dependencies]
log = "*"
num_cpus = "*"

[dependencies.freetype-rs]
path = "../servo-packages/freetype-rs"

[dependencies.euclid]
path = "../servo-packages/rust-geom"

[dependencies.gleam]
path = "../servo-packages/gleam"

[dependencies.glutin]
path = "../servo-packages/glutin"

